--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "tailwind build -i styles/index.css -o styles/globals.css --watch"
   },
   "dependencies": {
+    "@sanity/client": "^3.4.1",
+    "axios": "^0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.1.8",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
