--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
-    "tailwindcss": "^3.1.8",
     "uuidv4": "^6.2.13",
     "zustand": "^4.1.1"
   },
@@ -27,6 +26,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
